Add Aengus' fixes to TQA notebook

--- a/examples/honesty/honesty_control_TQA.ipynb
+++ b/examples/honesty/honesty_control_TQA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a99cb9b4",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "7d78bb45",
    "metadata": {},
    "outputs": [
@@ -21,8 +21,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rep-reading is already registered. Overwriting pipeline for task rep-reading...\n",
-      "rep-control is already registered. Overwriting pipeline for task rep-control...\n"
+      "/home/aengusl/.venv/repe/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -45,102 +45,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "53dc5615",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3edd360f9dfd417a9433ee709f3334c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "model_name_or_path = \"meta-llama/Llama-2-13b-chat-hf\"\n",
-    "\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_name_or_path, torch_dtype=torch.float16, device_map=\"auto\")\n",
-    "use_fast_tokenizer = \"LlamaForCausalLM\" not in model.config.architectures\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name_or_path, use_fast=use_fast_tokenizer, padding_side=\"left\", legacy=False)\n",
-    "tokenizer.pad_token_id = 0 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "6630542d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llama_models = [\n",
-    "    \"/data/private_models/cais_models/llama/llama_hf_weights_v1.1/llama-7b\",\n",
-    "    \"/data/private_models/cais_models/llama/llama_hf_weights_v1.1/llama-30b\",\n",
-    "    \"/data/private_models/cais_models/llama/llama_hf_weights_v1.1/llama-13b\",\n",
-    "    \"/data/private_models/cais_models/llama-2/llama/llama-2-13b-chat-hf\"\n",
-    "]\n",
-    "\n",
-    "model_path = llama_models[-1]\n",
-    "model_name = model_path.split(\"/\")[-1]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "5388f7cd",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You are using the default legacy behaviour of the <class 'transformers.models.llama.tokenization_llama.LlamaTokenizer'>. If you see this, DO NOT PANIC! This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=True`. This should only be set if you understand what it means, and thouroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [00:16<00:00,  8.32s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-10-07 22:46:19,441] [INFO] [real_accelerator.py:158:get_accelerator] Setting ds_accelerator to cuda (auto detect)\n"
+      "cuda:0\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58b640d195694319a7be6ee14a62d431",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/3 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "# load model\n",
-    "precision = torch.float16\n",
-    "config = AutoConfig.from_pretrained(model_path, trust_remote_code=True)\n",
-    "use_fast_tokenizer = \"LlamaForCausalLM\" not in config.architectures\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_path, use_fast=use_fast_tokenizer, padding_side=\"left\", torch_dtype=precision)\n",
-    "tokenizer.padding_side = \"left\"\n",
-    "tokenizer.pad_token_id = 0 if tokenizer.pad_token_id is None else tokenizer.pad_token_id\n",
-    "# tokenizer.bos_token_id = 1\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_path, device_map=\"auto\", torch_dtype=precision)"
+    "model_name_or_path = \"meta-llama/Llama-2-7b-chat-hf\"\n",
+    "cache_dir = \"/media/aengusl/eea40da3-4f74-4c87-a761-47188bc30c07\"\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name_or_path, torch_dtype=torch.float16, device_map=\"auto\", cache_dir=cache_dir)\n",
+    "use_fast_tokenizer = \"LlamaForCausalLM\" not in model.config.architectures\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name_or_path, use_fast=use_fast_tokenizer, padding_side=\"left\", legacy=False, cache_dir=cache_dir)\n",
+    "tokenizer.pad_token_id = 0 \n",
+    "# clear the gpu memory\n",
+    "# torch.cuda.empty_cache()\n",
+    "model.to(torch.device(\"cuda\"))\n",
+    "print(model.device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "id": "6630542d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# llama_models = [\n",
+    "#     \"/data/private_models/cais_models/llama/llama_hf_weights_v1.1/llama-7b\",\n",
+    "#     \"/data/private_models/cais_models/llama/llama_hf_weights_v1.1/llama-30b\",\n",
+    "#     \"/data/private_models/cais_models/llama/llama_hf_weights_v1.1/llama-13b\",\n",
+    "#     \"/data/private_models/cais_models/llama-2/llama/llama-2-13b-chat-hf\"\n",
+    "# ]\n",
+    "\n",
+    "# model_path = llama_models[-1]\n",
+    "# model_name = model_path.split(\"/\")[-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5388f7cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load model\n",
+    "# precision = torch.float16\n",
+    "# config = AutoConfig.from_pretrained(model_path, trust_remote_code=True)\n",
+    "# ### NOTE: this config is cursed, try use model.config.architectures instead\n",
+    "# use_fast_tokenizer = \"LlamaForCausalLM\" not in config.architectures\n",
+    "# tokenizer = AutoTokenizer.from_pretrained(model_path, use_fast=use_fast_tokenizer, padding_side=\"left\", torch_dtype=precision)\n",
+    "# tokenizer.padding_side = \"left\"\n",
+    "# tokenizer.pad_token_id = 0 if tokenizer.pad_token_id is None else tokenizer.pad_token_id\n",
+    "# # tokenizer.bos_token_id = 1\n",
+    "# model = AutoModelForCausalLM.from_pretrained(model_path, device_map=\"auto\", torch_dtype=precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "72417cf7",
    "metadata": {},
    "outputs": [],
@@ -157,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "88c149ab",
    "metadata": {},
    "outputs": [],
@@ -248,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "c2acfe74",
    "metadata": {},
    "outputs": [
@@ -272,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "f32161d7",
    "metadata": {},
    "outputs": [
@@ -280,14 +257,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "65it [00:40,  1.59it/s]                        "
+      "65it [00:59,  1.09it/s]                        "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model_baseline_acc: 0.35862913096695226\n"
+      "Standard Zero-Shot Accuracy: 0.3011015911872705\n"
      ]
     },
     {
@@ -306,32 +283,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "87fad3a6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "65it [00:42,  1.54it/s]                        "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model_baseline_preset_acc: 0.3427172582619339\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# with truthful prompt\n",
     "questions, answers, labels = load_tqa_sentences(user_tag=user_tag, assistant_tag=assistant_tag, preset=experimental_prompt)\n",
@@ -357,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e1ffaf7c",
    "metadata": {},
    "outputs": [],
@@ -380,40 +335,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "705141fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "65it [15:55, 14.70s/it]                        "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "model_sample_wise_aa_acc: 0.5397796817625459\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "questions, answers, labels = load_tqa_sentences(user_tag=user_tag, assistant_tag=assistant_tag, preset=\"\")\n",
     "coeff = 0.25\n",
@@ -475,9 +400,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "display",
+   "display_name": "repe",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -489,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
